--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@types/bson": "^1.0.6",
     "@types/express": "^4.0.39",
     "@types/mongoose": "^4.7.29",
+    "@types/multiparty": "0.0.31",
     "bson": "^1.0.4",
     "express": "^4.16.2",
-    "mongoose": "^4.13.7"
+    "mongoose": "^4.13.7",
+    "multiparty": "^4.1.3"
   }
 }
